--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --port 3000 --mode development --open --hot --env mainColor=#8520d0 --env name='Soporte Centro Médico' --env description='Asistente Virtual' --env avatar=../../assets/user.svg --env socketUrl=https://ws-ailalia.ngrok.io --env restUrl=https://rest-ailalia.ngrok.io/rest/v1/api",
-    "build": "webpack --mode production --env mainColor=#8520d0 --env name='Soporte Centro Médico' --env description='Asistente Virtual' --env avatar=assets/user.svg --env socketUrl=https://ws-ailalia.ngrok.io --env restUrl=https://rest-ailalia.ngrok.io/rest/v1/api"
+    "build": "webpack --mode production --env mainColor=#8520d0 --env name='Soporte Centro Médico' --env description='Asistente Virtual' --env avatar=assets/user.svg --env socketUrl=https://ucchback.elipsechat.com/ --env restUrl=https://ucchback.elipsechat.com/rest/v1/api"
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "global": "^4.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-icons": "^4.3.1",
     "react-rut-formatter": "^0.2.1",
+    "serve": "^13.0.2",
     "socket.io-client": "^4.4.0",
     "spinners-react": "^1.0.6",
     "sweetalert2": "^11.2.1",
